[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/chara-pal.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Components/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Particle/part-bubble.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Particle/part-heart.png" type="Texture" id=4]
[ext_resource path="res://Sound/item-heal.wav" type="AudioStream" id=5]
[ext_resource path="res://Sound/item-cookie.wav" type="AudioStream" id=6]
[ext_resource path="res://Sound/damage.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/item-cookie-max.wav" type="AudioStream" id=8]
[ext_resource path="res://Sound/splash.wav" type="AudioStream" id=9]
[ext_resource path="res://Sound/game-over.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 12 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.556738, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.996454 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="GrappleLine" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 48, -24 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="AimLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 48, -24 )
width = 3.0
default_color = Color( 0.4, 1, 0.439216, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )

[node name="GrappleDetector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GrappleDetector"]
shape = SubResource( 2 )

[node name="ItemCollector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ItemCollector"]
shape = SubResource( 3 )

[node name="DamageDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DamageDetector"]
shape = SubResource( 3 )

[node name="Particles" type="Node2D" parent="."]

[node name="Bubbles" type="CPUParticles2D" parent="Particles"]
z_index = -1
emitting = false
lifetime = 0.5
randomness = 1.0
local_coords = false
texture = ExtResource( 3 )
direction = Vector2( 0, -1 )
spread = 25.0
gravity = Vector2( 0, -98 )
initial_velocity = 10.0
scale_amount = 0.7
color_ramp = SubResource( 4 )

[node name="Hearts" type="CPUParticles2D" parent="Particles"]
z_index = -1
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
randomness = 1.0
local_coords = false
texture = ExtResource( 4 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, -180 )
initial_velocity = 90.0
initial_velocity_random = 0.5
scale_amount = 0.7
color_ramp = SubResource( 4 )

[node name="Splash" type="CPUParticles2D" parent="Particles"]
emitting = false
amount = 30
one_shot = true
explosiveness = 1.0
lifetime_randomness = 1.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2( 0, -1 )
initial_velocity = 100.0
initial_velocity_random = 0.5
scale_amount = 2.0
scale_amount_random = 0.5
color_ramp = SubResource( 5 )

[node name="AudioDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AudioGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="AudioCollect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="AudioCollectMax" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="AudioHeal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AudioSplash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[connection signal="area_entered" from="GrappleDetector" to="." method="_on_GrappleDetector_area_entered"]
[connection signal="area_exited" from="GrappleDetector" to="." method="_on_GrappleDetector_area_exited"]
[connection signal="area_entered" from="ItemCollector" to="." method="_on_ItemCollector_area_entered"]
[connection signal="area_entered" from="DamageDetector" to="." method="_on_DamageDetector_area_entered"]
